# yggdrasil

./: .gitignore  AI_MEMORY_INDEX.txt  BENCHMARKS.md  CHANGELOG.md  LICENSE  MVP_REPORT.md  NEXT_SESSION_PROMPT.md  README.md  RELEASING.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: marketplace.json  mcp.json  plugin.json
.cursor-plugin/: marketplace.json  plugin.json
commands/: ygg-health.md  ygg-recall.md  ygg-remember.md
docs/: agent-protocol.md  backend-boundary.md  cross-surface.md  mcp-facade.md  memory-review-queue.md  reproducible-demo.md  review-actions.md  ygg-cli.md
eval/: ygg_eval.py  ygg_tune.py
examples/: layout-overflow-debugging-lesson.json
hooks/: hooks.json
i18n/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ru.md  README.zh.md
integrations/: AGENTS.yggdrasil.md  CLAUDE.yggdrasil.md  mcp.yggdrasil.example.json
scripts/: install.sh  materialize_muninn_memory.py  release.sh  run_gates.sh  run_muninn_demo.sh  ygg.py  ygg_core.py  ygg_cross_agent_demo.py  ygg_dense_gate.py  ygg_embeddings.py  ygg_governance_gate.py  ygg_import_claude_memory.py  ygg_mcp_server.py  ygg_memory_server.py  ygg_quality_gate.py  ygg_review_actions.py  ygg_review_apply_gate.py  ygg_review_queue.py  ygg_seed_demo.py
skills/: README.md
tests/: test_codex_seed.py  test_config.py  test_seed_distill.py  test_service.py  test_ygg_core.py  test_ygg_memory_server.py
yggdrasil/: __init__.py  cli.py  install.sh  materialize_memory.py  service.py  ygg.py  ygg_config.py  ygg_core.py  ygg_dense_gate.py  (+15 more)
(+23 files in other folders)
