[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yggdrasil-memory"
version = "0.2.0"
description = "One shared, durable memory for all your AI coding agents — MCP, local-first, zero-dependency."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Yggdrasil contributors" }]
keywords = ["mcp", "memory", "ai-agents", "claude", "codex", "local-first", "obsidian", "rag"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/VonderVuflya/yggdrasil"
Repository = "https://github.com/VonderVuflya/yggdrasil"
Issues = "https://github.com/VonderVuflya/yggdrasil/issues"

[project.scripts]
ygg = "yggdrasil.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["yggdrasil"]

[tool.hatch.build.targets.sdist]
include = ["yggdrasil", "scripts", "tests", "eval", "docs", "README.md", "LICENSE", "CHANGELOG.md"]
